--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
 
     <main>
       <section class="card">
-        <h2>📝 Hausaufgaben</h2>
+        <h2> 🗒️Termine</h2>
         <ul id="tasks" class="list"></ul>
         <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap">
-          <button class="btn small" onclick="openTaskModal()">➕ Aufgabe hinzufügen</button>
-          <button class="btn small ghost admin-only" id="addEventBtn" onclick="openEventModal()">➕ Termin hinzufügen</button>
+          <button class="btn small" onclick="openTaskModal()">➕ Termine hinzufügen</button>
+          <button class="btn small ghost admin-only" id="addEventBtn" onclick="openEventModal()">➕ Hausaufgaben hinzufügen</button>
         </div>
       </section>
-
+      
       <section class="card">
-        <h2>📅 Termine</h2>
+        <h2>🗒️ Hausaufgaben</h2>
         <ul id="events" class="list"></ul>
       </section>
 
@@ -80,7 +80,7 @@
 
       <section class="card collapse" id="gameSection">
         <div class="collapse-header" onclick="toggleGamePanel()">
-          <div style="font-weight:800">🎮 Flappy Person — Spiel</div>
+          <div style="font-weight:800">🎮 Flappy Person BETA  — Spiel</div>
           <div id="gameToggleLabel" style="opacity:.85">Klicken um zu öffnen</div>
         </div>
         <div class="collapse-body" id="gameBody">
