--- a/index.html
+++ b/index.html
@@ -318,5 +318,7 @@
     function init(){ renderTasks(); renderEvents(); renderNotes(); updateRoleUI(); document.querySelectorAll('.admin-only').forEach(el=>el.style.display=(currentRole==='teacher'||currentRole==='admin')?'inline-flex':'none'); }
     init();
   </script>
+  
+<save-data></save-data>
+
 </body>
-</html>
